--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gradle-util-rs"
-version = "0.1.0-alpha.2"
+version = "0.1.0-alpha.3"
 edition = "2021"
 description = "Gradle util written in Rust"
 repository = "https://github.com/jason5lee/gradle-util-rs"
@@ -14,6 +14,13 @@ notify = "4.0"
 env_logger = "0.9"
 clap = { version = "3.0", features = ["derive"] }
 humantime = "2.1"
+apply = "0.3"
+walkdir = "2.3"
+pathdiff = "0.2"
+fxhash = "0.2"
+indexmap = { version = "1.8", features = [ "std" ] }
+termcolor = "1.1"
+chrono = "0.4"
 
 [[bin]]
 name = "gur"
