--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,7 @@ jobs:
       - name: Setup | armv7 tools
         if: steps.cargo-cache.outputs.cache-hit != 'true' && matrix.target == 'armv7-unknown-linux-gnueabihf'
         run: |
+          sudo apt update -y
           sudo apt install -y build-essential gcc-arm-linux-gnueabihf
           echo '[target.armv7-unknown-linux-gnueabihf]' >> ~/.cargo/config
           echo 'linker = "arm-linux-gnueabihf-gcc"' >> ~/.cargo/config
