--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gradle-util-rs"
-version = "0.1.0-alpha.4"
+version = "0.1.0-alpha.5"
 edition = "2021"
 description = "Gradle util written in Rust"
 repository = "https://github.com/jason5lee/gradle-util-rs"
@@ -18,10 +18,13 @@ apply = "0.3"
 walkdir = "2.3"
 pathdiff = "0.2"
 fxhash = "0.2"
-indexmap = { version = "1.8", features = [ "std" ] }
+indexmap = { version = "1.8", features = [ "std", "serde" ] }
 termcolor = "1.1"
 chrono = "0.4"
 phf = { version = "0.10", features = ["macros"] }
+serde = { version = "1.0", features = ["derive"] }
+dirs = "4.0"
+toml = "0.5"
 
 [[bin]]
 name = "gur"
