--- a/templates/project.toml
+++ b/templates/project.toml
@@ -1,3 +1,5 @@
+description = "Single project"
+
 [args]
 wrapper = { description = "Gradle wrapper version", default = "7.3.3" }
 targetJvm = { default = "17" }
