--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -132,26 +132,23 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: |
           cd target/${{ matrix.target }}/release
-          cp -r ../../../templates .
           strip gur.exe
-          7z a ../../../${{ matrix.name }} gur.exe templates
+          7z a ../../../${{ matrix.name }} gur.exe
           cd -
 
       - name: Post Setup | Prepare artifacts [-nix]
         if: matrix.target != 'armv7-unknown-linux-gnueabihf' && matrix.os != 'windows-latest'
         run: |
           cd target/${{ matrix.target }}/release
-          cp -r ../../../templates .
           strip gur
-          tar czvf ../../../${{ matrix.name }} gur templates
+          tar czvf ../../../${{ matrix.name }} gur
           cd -
 
       - name: Post Setup | Prepare artifacts [-nix]
         if: matrix.target == 'armv7-unknown-linux-gnueabihf'
         run: |
           cd target/${{ matrix.target }}/release
-          cp -r ../../../templates .
-          tar czvf ../../../${{ matrix.name }} gur templates
+          tar czvf ../../../${{ matrix.name }} gur
           cd -
 
       - name: Post Setup | Prepare checksums [Windows]
