--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ phf = { version = "0.10", features = ["macros"] }
 serde = { version = "1.0", features = ["derive"] }
 dirs = "4.0"
 toml = "0.5"
+anyhow = "1.0"
 
 [[bin]]
 name = "gur"
